# 61850Test

./: CMakeLists.txt  README.md
3rd/libiec61850/: logging_api.h  stack_config.h
docs/: basic_io_测试点清单.md  test_program_usage.md  测试记录清单.md
inc/: iec61850_wrapper.h
libiec61850-1.5.3/: CMakeLists.txt
libiec61850-1.5.3/build_static/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libiec61850.sln
libiec61850-1.5.3/build_static/hal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  hal.sln  hal.vcxproj  hal.vcxproj.filters
libiec61850-1.5.3/build_static/hal/Release/: hal.lib
libiec61850-1.5.3/build_static/hal/hal.dir/Release/hal.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  hal.lastbuildstate  lib.command.1.tlog
libiec61850-1.5.3/build_static/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  iec61850.vcxproj  iec61850.vcxproj.filters  version.rc
libiec61850-1.5.3/build_static/src/Release/: iec61850.lib
libiec61850-1.5.3/build_static/src/iec61850.dir/Release/: version.res
libiec61850-1.5.3/build_static/src/iec61850.dir/Release/iec61850.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link-cvtres.read.1.tlog  Lib-link-cvtres.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  iec61850.lastbuildstate  lib.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
libiec61850-1.5.3/build_static/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
libiec61850-1.5.3/build_static/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
libiec61850-1.5.3/hal/: CMakeLists.txt
libiec61850-1.5.3/src/: CMakeLists.txt
libiec61850-1.5.3/src/mms/iso_mms/asn1c/: OCTET_STRING.c  constr_CHOICE.c  constr_SET_OF.c
src/: iec61850_wrapper.cpp  iec61850_wrapper_test.cpp  test_msg_logger.cpp  test_msg_logger.h
